--- a/src/Presentation/SmartStore.Web/Administration/Views/Export/Create.cshtml
+++ b/src/Presentation/SmartStore.Web/Administration/Views/Export/Create.cshtml
@@ -5,17 +5,17 @@
 }
 
 <div>
-	@if(Model.Provider.AvailableProviders.Count > 0)
+	@if(Model.AvailableProviders.Count > 0)
 	{
 		<form method="POST" class="export-profile-form" action="@Url.Action("Create", "Export")">
 			<table class="adminContent">
 				<tr>
 					<td class="adminTitle">
-						@Html.SmartLabelFor(model => model.Provider.SystemName)
+						@Html.SmartLabelFor(model => model.ProviderSystemName)
 					</td>
 					<td class="adminData">
-						<select name="@Html.FieldNameFor(x => x.Provider.SystemName)" id="@Html.FieldIdFor(x => x.Provider.SystemName)" class="large-select2 control-large">
-							@foreach (var item in Model.Provider.AvailableProviders)
+						<select name="@Html.FieldNameFor(x => x.ProviderSystemName)" id="@Html.FieldIdFor(x => x.ProviderSystemName)" class="large-select2 control-large">
+							@foreach (var item in Model.AvailableProviders)
 							{
 								<option value="@item.SystemName" data-id="@item.Id" data-imageurl="@item.ImageUrl">@item.FriendlyName</option>
 							}
@@ -45,7 +45,7 @@
 						&nbsp;
 					</td>
 					<td class="adminData" style="width: 510px; max-width: 510px;">
-						@foreach (var item in Model.Provider.AvailableProviders)
+						@foreach (var item in Model.AvailableProviders)
 						{
 							<span id="ExportProviderDescription@(item.Id)" class="export-provider-description">@item.Description</span>
 						}
