Resolves #802 Saving customer looses Customer Roles when validation fails

--- a/src/Presentation/SmartStore.Web/Administration/Views/Customer/_CreateOrUpdate.cshtml
+++ b/src/Presentation/SmartStore.Web/Administration/Views/Customer/_CreateOrUpdate.cshtml
@@ -516,7 +516,7 @@
                 @Html.SmartLabelFor(model => model.AddRewardPointsMessage)
             </td>
             <td class="adminData">
-                @Html.EditorFor(model => model.AddRewardPointsMessage)
+                @Html.TextAreaFor(model => model.AddRewardPointsMessage)
                 @Html.ValidationMessageFor(model => model.AddRewardPointsMessage)
             </td>
         </tr>
