--- a/src/Presentation/SmartStore.Web/Administration/Views/UrlRecord/_CreateOrUpdate.cshtml
+++ b/src/Presentation/SmartStore.Web/Administration/Views/UrlRecord/_CreateOrUpdate.cshtml
@@ -15,6 +15,14 @@
 	</tr>
 	<tr>
 		<td class="adminTitle">
+			@Html.SmartLabelFor(model => model.SlugsPerEntity)
+		</td>
+		<td class="adminData">
+			<a href="@Url.Action("List", new { entityName = Model.EntityName, entityId = Model.EntityId })">@Model.SlugsPerEntity</a>
+		</td>
+	</tr>
+	<tr>
+		<td class="adminTitle">
 			@Html.SmartLabelFor(model => model.IsActive)
 		</td>
 		<td class="adminData">
