--- a/src/Presentation/SmartStore.Web/Administration/Views/UrlRecord/_CreateOrUpdate.cshtml
+++ b/src/Presentation/SmartStore.Web/Administration/Views/UrlRecord/_CreateOrUpdate.cshtml
@@ -2,6 +2,7 @@
 @using SmartStore.Admin.Models.UrlRecord;
 @using Telerik.Web.Mvc.UI;
 
+@Html.ValidationSummary(true)
 @Html.HiddenFor(model => model.Id)
 
 <table class="adminContent">
