--- a/src/Presentation/SmartStore.Web/Administration/Views/Category/_CreateOrUpdate.cshtml
+++ b/src/Presentation/SmartStore.Web/Administration/Views/Category/_CreateOrUpdate.cshtml
@@ -294,6 +294,10 @@
                        </td>
                        <td class="adminData">
                            @Html.TextAreaFor(x => x.SeName, new { @class = "input-large" })
+							@if (Model.Id != 0)
+							{
+								@Html.Action("NamesPerEntity", "UrlRecord", new { entityName = "Category", entityId = @Model.Id })
+							}
                            @Html.ValidationMessageFor(model => model.SeName)
                        </td>
                    </tr>
