--- a/src/Presentation/SmartStore.Web/Administration/Views/Manufacturer/_CreateOrUpdate.cshtml
+++ b/src/Presentation/SmartStore.Web/Administration/Views/Manufacturer/_CreateOrUpdate.cshtml
@@ -215,6 +215,10 @@
                        </td>
                        <td class="adminData">
                            @Html.TextAreaFor(x => x.SeName)
+							@if (Model.Id != 0)
+							{
+								@Html.Action("NamesPerEntity", "UrlRecord", new { entityName = "Manufacturer", entityId = @Model.Id })
+							}
                            @Html.ValidationMessageFor(model => model.SeName)
                        </td>
                    </tr>
