SEO Names: Link from URL record edit page to entity's edit page

--- a/src/Presentation/SmartStore.Web/Administration/Views/UrlRecord/List.cshtml
+++ b/src/Presentation/SmartStore.Web/Administration/Views/UrlRecord/List.cshtml
@@ -100,7 +100,8 @@
 							.Width(200);
 						columns.Bound(x => x.EntityId)
 							.Width(140)
-							.Centered();						
+							.Centered()
+							.ClientTemplate("<a href='<#= EntityUrl #>'><#= EntityId #></a>");
 						columns.Bound(x => x.IsActive)
 							.Template(item => @Html.SymbolForBool(item.IsActive))
 							.ClientTemplate(@Html.SymbolForBool("IsActive"))
