--- a/src/Presentation/SmartStore.Web/Administration/Views/UrlRecord/Edit.cshtml
+++ b/src/Presentation/SmartStore.Web/Administration/Views/UrlRecord/Edit.cshtml
@@ -11,6 +11,9 @@
             @title - @Model.Slug @Html.ActionLink("(" + T("Admin.Common.BackToList") + ")", "List")
         </div>
         <div class="options">
+			<a href="@Model.EntityUrl" class="btn">
+				<i class="fa fa-external-link"></i>&nbsp;@T("Admin.Common.Entity")
+			</a>
             <button type="submit" name="save" value="save" class="btn btn-primary"><i class="fa fa-check"></i>&nbsp;@T("Admin.Common.Save")</button>
             <button type="submit" name="save" value="save-continue" class="btn">@T("Admin.Common.SaveContinue")</button>
 			<button type="submit" id="urlrecord-delete" name="urlrecord-delete" class="btn btn-danger"><i class="fa fa-trash-o"></i>&nbsp;@T("Admin.Common.Delete")</button>
