Export profiles: Minor UI fixes (further changes & fixes follow in a separate branch)

--- a/src/Presentation/SmartStore.Web/Administration/Content/admin.less
+++ b/src/Presentation/SmartStore.Web/Administration/Content/admin.less
@@ -430,12 +430,12 @@ td.adminData > input[type="checkbox"] {
 -------------------------------------------------------------- */
 .large-select2 {
 	.select2-choice {
-		height: 52px;
-		min-height: 52px;
+		height: 42px;
+		min-height: 42px;
 		padding-top: 4px;
 
 		> div > b {
-			padding-top: 14px;
+			padding-top: 10px;
 		}
 	}
 }
@@ -444,10 +444,13 @@ td.adminData > input[type="checkbox"] {
 	overflow: hidden;
     text-overflow: ellipsis;
     white-space: nowrap;
+	height: 38px;
 
 	img {
 		margin-right: 12px;
 		vertical-align: middle;
+		text-align: center;
+		max-height: 100%;
 	}
 	> div {
 		margin-right: 0px !important;
