--- a/src/Presentation/SmartStore.Web/Administration/Views/Export/Preview.cshtml
+++ b/src/Presentation/SmartStore.Web/Administration/Views/Export/Preview.cshtml
@@ -22,10 +22,10 @@
 			{
 				<a href="@Url.Action("DownloadLogFile", new { id = Model.Id })" class="btn" download><i class="fa fa-file-text-o"></i>&nbsp;@T("Admin.Configuration.ActivityLog")</a>
 			}
-			<button type="button" id="ExportSelected" class="btn btn-primary">
+			<button type="button" id="ExportSelected" class="btn btn-default">
 				<i class="fa fa-gears"></i>&nbsp;@T("Admin.Common.ExportSelected")
 			</button>
-			<button type="button" id="ExportAll" class="btn btn-primary">
+			<button type="button" id="ExportAll" class="btn btn-default">
 				<i class="fa fa-gears"></i>&nbsp;@T("Admin.Common.ExportAll")
 			</button>
 		</form>
