--- a/src/Presentation/SmartStore.Web/Administration/Views/Export/_Tab.Projection.cshtml
+++ b/src/Presentation/SmartStore.Web/Administration/Views/Export/_Tab.Projection.cshtml
@@ -42,7 +42,7 @@
 
 	@if (Model.Provider.EntityType == ExportEntityType.Product)
 	{	
-		if (Model.Provider.Supporting.Contains(ExportSupport.ProjectionAttributeCombinationAsProduct))
+		if (Model.Provider.Supporting.Contains(ExportFeatures.CanProjectAttributeCombinations))
 		{
 			<tr>
 				<td class="adminTitle">
@@ -71,7 +71,7 @@
 			</tr>
 		}
 
-		if (Model.Provider.Supporting.Contains(ExportSupport.ProjectionNoGroupedProducts))
+		if (Model.Provider.Supporting.Contains(ExportFeatures.CanOmitGroupedProducts))
 		{
 			<tr>
 				<td class="adminTitle">
@@ -110,7 +110,7 @@
 			</td>
 		</tr>
 
-		if (Model.Provider.Supporting.Contains(ExportSupport.ProjectionShippingTime))
+		if (Model.Provider.Supporting.Contains(ExportFeatures.OffersShippingTimeFallback))
 		{
 			<tr>
 				<td class="adminTitle">
@@ -123,7 +123,7 @@
 			</tr>
 		}
 
-		if (Model.Provider.Supporting.Contains(ExportSupport.ProjectionShippingCosts))
+		if (Model.Provider.Supporting.Contains(ExportFeatures.OffersShippingCostsFallback))
 		{
 			<tr>
 				<td class="adminTitle">
@@ -145,7 +145,7 @@
 			</tr>
 		}
 
-		if (Model.Provider.Supporting.Contains(ExportSupport.ProjectionMainPictureUrl))
+		if (Model.Provider.Supporting.Contains(ExportFeatures.CanIncludeMainPicture))
 		{
 			<tr>
 				<td class="adminTitle">
@@ -158,7 +158,7 @@
 			</tr>
 		}
 
-		if (Model.Provider.Supporting.Contains(ExportSupport.ProjectionBrand))
+		if (Model.Provider.Supporting.Contains(ExportFeatures.OffersBrandFallback))
 		{
 			<tr>
 				<td class="adminTitle">
@@ -171,7 +171,7 @@
 			</tr>
 		}
 
-		if (Model.Provider.Supporting.Contains(ExportSupport.ProjectionDescription))
+		if (Model.Provider.Supporting.Contains(ExportFeatures.CanProjectDescription))
 		{
 			<tr>
 				<td colspan="2">
