--- a/src/Presentation/SmartStore.Web/Administration/Views/Export/_Tab.Projection.cshtml
+++ b/src/Presentation/SmartStore.Web/Administration/Views/Export/_Tab.Projection.cshtml
@@ -42,7 +42,7 @@
 
 	@if (Model.Provider.EntityType == ExportEntityType.Product)
 	{	
-		if (Model.Provider.Feature.HasFlag(ExportFeature.CanProjectAttributeCombinations))
+		if (Model.Provider.Feature.HasFlag(ExportFeatures.CanProjectAttributeCombinations))
 		{
 			<tr>
 				<td class="adminTitle">
@@ -71,7 +71,7 @@
 			</tr>
 		}
 
-		if (Model.Provider.Feature.HasFlag(ExportFeature.CanOmitGroupedProducts))
+		if (Model.Provider.Feature.HasFlag(ExportFeatures.CanOmitGroupedProducts))
 		{
 			<tr>
 				<td class="adminTitle">
@@ -110,7 +110,7 @@
 			</td>
 		</tr>
 
-		if (Model.Provider.Feature.HasFlag(ExportFeature.OffersShippingTimeFallback))
+		if (Model.Provider.Feature.HasFlag(ExportFeatures.OffersShippingTimeFallback))
 		{
 			<tr>
 				<td class="adminTitle">
@@ -123,7 +123,7 @@
 			</tr>
 		}
 
-		if (Model.Provider.Feature.HasFlag(ExportFeature.OffersShippingCostsFallback))
+		if (Model.Provider.Feature.HasFlag(ExportFeatures.OffersShippingCostsFallback))
 		{
 			<tr>
 				<td class="adminTitle">
@@ -145,7 +145,7 @@
 			</tr>
 		}
 
-		if (Model.Provider.Feature.HasFlag(ExportFeature.CanIncludeMainPicture))
+		if (Model.Provider.Feature.HasFlag(ExportFeatures.CanIncludeMainPicture))
 		{
 			<tr>
 				<td class="adminTitle">
@@ -158,7 +158,7 @@
 			</tr>
 		}
 
-		if (Model.Provider.Feature.HasFlag(ExportFeature.OffersBrandFallback))
+		if (Model.Provider.Feature.HasFlag(ExportFeatures.OffersBrandFallback))
 		{
 			<tr>
 				<td class="adminTitle">
@@ -171,7 +171,7 @@
 			</tr>
 		}
 
-		if (Model.Provider.Feature.HasFlag(ExportFeature.CanProjectDescription))
+		if (Model.Provider.Feature.HasFlag(ExportFeatures.CanProjectDescription))
 		{
 			<tr>
 				<td colspan="2">
